update, delete method's: Company, Interview. Little update api-docs
